Bug fix: Icons missing or invisible (issue #83)

--- a/src/pages/sidebar.css
+++ b/src/pages/sidebar.css
@@ -259,7 +259,7 @@ body[data-locale="uk"] #bookmark-filter {
 }
 
 .inline-msgbar.msgbar-warning .inline-msgbar-icon {
-    background-image: url("chrome://global/skin/icons/warning.svg");
+    background-image: url("../img/msgbar-warn.svg");
     background-size: contain;
     background-repeat: no-repeat;
 }
